--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MobileCompProject</string>
+    <string name="Notifications">Notifications</string>
+    <string name="Logout">Logout</string>
+    <string name="Account">Account</string>
 </resources>
