Add login verification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="Notifications">Notifications</string>
     <string name="Logout">Logout</string>
     <string name="Account">Account</string>
+    <string name="username_key">Username</string>
+    <string name="password_key">Password</string>
 </resources>
