--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="Account">Account</string>
     <string name="username_key">Username</string>
     <string name="password_key">Password</string>
+    <string name="ArrowBack">ArrowBack</string>
 </resources>
