Add more borked stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="username_key">Username</string>
     <string name="password_key">Password</string>
     <string name="ArrowBack">ArrowBack</string>
+    <string name="Delete">Delete</string>
 </resources>
