--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="Account">Account</string>
     <string name="ArrowBack">ArrowBack</string>
     <string name="Delete">Delete</string>
+    <string name="reminder_channel_name">Reminders</string>
+    <string name="reminder_channel_desc">Notifications for reminders</string>
+    <string name="reminder_channel_id">REMINDER_CHANNEL</string>
 </resources>
